# mlutil

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: mlutil.yml
lmserver/: app.py  config_redpajama.yaml  requirements.txt  setup.py  test_config.yaml
lmserver/conf/: config.yaml  owca_peft_config.yaml
lmserver/lmserver/: language_model.py  models.py  peft_utils.py  sampling_parameters.py
mlutil/: __init__.py  aggregation.py  callbacks.py  chatgpt_api.py  compressed_keyed_vectors.py  dataviz.py  dimensionality_reduction.py  embeddings.py  feature_extraction_utils.py  guild.py  minichain_utils.py  misc.py  optimal_transport.py  parallel.py  prototype_selection.py  ranking_aggregation.py  recommendation.py  rnn_utils.py  semantic_web_utils.py  sentence_transformers_utils.py  textmining.py  topic_modeling.py  utils.py  vector_ops.py  web_search.py
mlutil/evolutionary_algorithms/: multiobjective.py
mlutil/feature_extraction/: aggregation.py  embeddings.py  embeddings_torch.py  images.py  text.py  transformers.py
mlutil/sentence_rnn/: SentenceRNN.py  __init__.py
mlutil/text/: code_tokenization.py  embedding_similarity_comparator.py  rwkv.py  rwkv_utils.py  sentence_transformer_utils.py
mlutil/visualization/: treemaps.py  word_clouds.py
mlutil_rust/: Cargo.toml
mlutil_rust/src/: main.rs
test/: test_aggregation.py  test_chatgpt.py  test_embeddings.py  test_sentence_transformers.py  test_vector_ops.py  test_web_search.py
