[tool.poetry]
name = "mlutil"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gensim = "^4.3.2"
nltk = "^3.8.1"
pandas = "^2.1.1"
numpy = "^1.26.1"
tqdm = "^4.65.0"
scikit-learn = "^1.3.1"
pytest = "^7.2.2"
seaborn = "^0.13.0"
stop-words = "^2018.7.23"
sru = "2.6.0"
wordcloud = "^1.9.2"
ranky = "0.3.2"
returns = "^0.22.0"
openai = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
