[package]
name = "mlutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mlutil"
crate-type = ["cdylib"]

[dependencies]
clap = {version = "4.1.1", features=["derive"]}
derivative = "2.2.0"
# polars = { git = "https://github.com/pola-rs/polars"}
# pyo3 = { version = "0.16.4", features = ["extension-module"] }
